--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ if(contact==null || contact=="")
         <a href="https://www.instagram.com/accounts/login/" class="fa fa-instagram"></a>
       </div>
       <div class="container">
-     <form name="myform" method="post" action="valid.html" onsubmit="return validateform()" >  
+     <form name="myform" method="post" action="submit.html" onsubmit="return validateform()" >  
  <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your First name..">
           <label for="lname">Last Name</label>
