--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <a href="https://www.instagram.com/accounts/login/" class="fa fa-instagram"></a>
         </div>
         <div class="container">
-          <form name="myform" method="post" action="index2.html" onsubmit="return validateform()" >
+          <form name="myform" method="get" action="index2.html" onsubmit="return validateform()" >
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your First name..">
             <label for="lname">Last Name</label>
